# AAIO

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pylint.yml  python-package.yml
docs/: README.md  SUMMARY.md  index.md  khoroshie-praktiki.md  nachalo-raboty.md
docs/common/: balans-magazina.md  ip-adresa.md  kursy-valyut.md
docs/payments/: poluchenie-statusa-platezha.md  proverka-statusa-platezha.md  sozdanie-platezha.md
docs/payoffs/: proverka-statusa-zayavki.md  sozdanie-zayavki.md
src/aaio/: AAIO.py  __init__.py  api.py  client.py  exceptions.py  utils.py
src/aaio/exceptions/: __init__.py  aaio_bad_request.py  bad_request.py
src/aaio/models/: __init__.py  payment_methods.py  payment_webhook.py  payoff_info.py  payoff_methods.py  payoff_rates.py  payoff_webhook.py
src/aaio/types/: balance.py  create_payoff.py  payment_info.py  payment_methods.py  payoff_info.py  payoff_methods.py  payoff_rates.py  payoff_sbp_banks.py  response.py
